--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 VITE_MOBILE_NUMBER=2349012345678
+VITE_SECRET-PAYSTACK_KEY=sk_test_b9d387f3f92b22dd050628f941e5a6db98b5d9ff
+VITE_PUBLIC_PAYSTACK_KEY=pk_test_c31342caca587e9b974c1b7eee2a7b3b09a9964b
