--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@paystack/inline-js": "^2.22.3",
     "@tailwindcss/vite": "^4.1.4",
     "framer-motion": "^12.7.4",
+    "lucide-react": "^0.501.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
