--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@paystack/inline-js": "^2.22.3",
     "@tailwindcss/vite": "^4.1.4",
+    "bcrypt": "^5.1.1",
     "framer-motion": "^12.7.4",
     "lucide-react": "^0.501.0",
     "react": "^19.0.0",
@@ -23,6 +24,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "^22.14.1",
     "@types/paystack__inline-js": "^1.0.1",
     "@types/react": "^19.0.10",
